Added detailed information